# ADMET_AI

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_frozen.txt
.github/workflows/: tests.yml
admet_ai/: __init__.py  admet_info.py  admet_model.py  admet_predict.py  constants.py  drugbank.py  physchem.py  plot.py  utils.py
admet_ai/resources/data/: admet.csv  drugbank_approved.csv
admet_ai/resources/models/admet_classification/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
admet_ai/resources/models/admet_regression/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
admet_ai/web/: run.py  wsgi.py
admet_ai/web/app/: __init__.py  config.py  models.py  storage.py  utils.py  views.py
admet_ai/web/app/templates/: index.html
docs/: reproduce.md
scripts/: compute_rdkit_features.py  config.yaml  evaluate_tdc_admet_all_multitask.py  evaluate_tdc_admet_group.py  filter_valid_molecules.py  get_drugbank_approved.py  lookup_in_tdc.py  merge_tdc_admet_all.py  merge_tdc_admet_multitask.py  plot_admet_speed.py  plot_admet_speed_large_scale.py  plot_drugbank_approved.py  plot_drugbank_reference.py  plot_radial_summaries.py  plot_tdc_results.py  prepare_tdc_admet_all.py  prepare_tdc_admet_group.py  runToxicity.py  sample_molecules.py  subjob  tdc_constants.py  train_tdc_admet_all.py  train_tdc_admet_group.py
tests/: test_admet_ai.py  test_admet_model.py
tests/data/: drugbank_approved_percentiles.csv.bz2  drugbank_approved_percentiles_antibiotics.csv.bz2  drugbank_approved_percentiles_nervous_system.csv.bz2
